--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==8.0.3
 cmake==3.22.1
-
+colorama==0.4.4
+face-recognition-models==0.3.0
 Flask==2.0.2
 imageio==2.13.4
 itsdangerous==2.0.1
@@ -18,10 +19,14 @@ python-dateutil==2.8.2
 pytz==2021.3
 PyWavelets==1.2.0
 scikit-image==0.19.1
-scikit-learn @ file:///C:/Users/D_D/Downloads/scikit_learn-0.24.2-cp310-cp310-win_amd64.whl
-scipy==1.7.3
-six==1.16.0
 sklearn==0.0
+scipy==1.7.3
+scikit-learn @ file:///C:/Users/D_D/Downloads/scikit_learn-0.24.2-cp310-cp310-win_amd64.whl
+
+six==1.16.0
+
 threadpoolctl==3.0.0
 tifffile==2021.11.2
 Werkzeug==2.0.2
+
+scikit_learn-0.24.2-cp310-cp310-win_amd64.whl
